# Wiki-FDH

./: CMakeLists.txt  Handapi.py  README.CN.md  README.en.md  README.md  dh_logger.py
c++/v1/: CMakeLists.txt
doc/: doc.py  pid.py
example/: main.cpp
fdh/c++/v1/: CMakeLists.txt
fdh/c++/v1/include/: dh.h  os.h
fdh/c++/v1/source/: demo_get_ip.cpp  demo_get_pid.cpp  demo_get_status.cpp  demo_set_angle_pid.cpp  demo_set_current_limited.cpp  demo_set_current_target.cpp  demo_set_omega_pid.cpp  logger.cpp  os.cpp
include/: left_hand.hpp  right_hand.hpp
python/v1/: demo_get_angular_range.py  demo_get_current.py  demo_get_firmware_version.py  demo_get_speed.py  demo_get_status.py  demo_set_angle_limited.py  demo_set_finger_angle.py  demo_set_finger_angle_pid.py  demo_set_finger_current.py  demo_set_finger_pid.py  demo_set_pwm.py  demo_set_speed_limited.py  demo_stop_motor.py  demo_user_emergency.py  demo_user_feedback.py  dh.py  pid.py  pid_param_debug.py  test.py
v1/: README.CN.md  README.md  build.sh  clean.sh  debug.py  demo_broadcast.py  demo_display.py  demo_get_angle.py  demo_get_angle_limited.py  demo_get_angular_velocity.py  demo_get_cnt.py  demo_get_current.py  demo_get_data.py  demo_get_ip.py  demo_get_omega_limited.py  demo_get_pid.py  demo_get_speed.py  demo_get_status.py  demo_get_version.py  demo_grisp_backup.py  demo_lookup.py  demo_loop_angle.py  demo_set_angle_limited.py  demo_set_current_limited.py  demo_set_finger_angle.py  demo_set_finger_angle_pid.py  demo_set_finger_current.py  demo_set_finger_pos_vel.py  demo_set_position_limited.py  demo_set_pwm.py  demo_test_calibration.py  demo_test_report.py  demo_user_calibration.py  demo_user_feedback.py  dh.py  display.py  limit_demo.py  run_demo.sh  send_test.py  sub_test.py  (+1 more)
v1/Demo/: CMakeLists.txt  demo_calibration.py  demo_get_cnt.py  demo_get_current.py  demo_get_current_limited.py  demo_get_current_pid.py  demo_get_errorcode.py  demo_get_firmware_version.py  demo_get_ip.py  demo_get_pos.py  demo_get_pos_limited.py  demo_get_pos_pid.py  demo_get_status.py  demo_get_velocity.py  demo_get_velocity_limited.py  demo_get_velocity_pid.py  demo_set_current.py  demo_set_current_limited.py  demo_set_current_pid.py  demo_set_pd_control.py  demo_set_pos.py  demo_set_pos_all.py  demo_set_pos_limited.py  demo_set_pos_pid.py  demo_set_pwm.py  demo_set_velocity_pid.py  demo_user.py
v1/Demo/source/: demo_calibration.cpp  demo_get_cnt.cpp  demo_get_current.cpp  demo_get_current_limited.cpp  demo_get_current_pid.cpp  demo_get_errorcode.cpp  demo_get_firmware_version.cpp  demo_get_ip.cpp  demo_get_pos.cpp  demo_get_pos_limited.cpp  demo_get_pos_pid.cpp  demo_get_status.cpp  demo_get_velocity.cpp  demo_get_velocity_limited.cpp  demo_get_velocity_pid.cpp  demo_set_current.cpp  demo_set_current_limited.cpp  demo_set_current_pid.cpp  demo_set_pd_control.cpp  demo_set_pos.cpp  demo_set_pos_all.cpp  demo_set_pos_limited.cpp  demo_set_pos_pid.cpp  demo_set_pwm.cpp  demo_set_velocity_pid.cpp  demo_user.cpp  logger.cpp  os.cpp
v1/HandAPI/: CMakeLists.txt
v1/HandAPI/include/: Handapi.h
v1/HandAPI/source/: Handapi.cpp
v1/Hand_Sdk/: HandSocket.py  Handapi.py
v1/include/: dh.h  function_result.h  logger.h
v1/log/: log.txt
v1/source/: demo_emergency_stop.cpp  demo_get_angular_speed.cpp  demo_get_cnt.cpp  demo_get_current.cpp  demo_get_driver_version.cpp  demo_get_errorcode.cpp  demo_get_ip.cpp  demo_get_limit_current.cpp  demo_get_limit_omega.cpp  demo_get_limit_position.cpp  demo_get_pid_current.cpp  demo_get_pid_omega.cpp  demo_get_pid_position.cpp  demo_get_position.cpp  dh.cpp  (+11 more)
v2/: CMakeLists.txt  HandSocket.py  README.CN.md  README.md  build.sh  clean.sh  demo.py  readme.md  run_api.sh  run_demo.sh  run_socket.sh
v2/Demo/: CMakeLists.txt  demo.cpp
yinshi/example/: CMakeLists.txt
yinshi/example/example/: main.cpp
yinshi/example/include/: left_hand.hpp  right_hand.hpp
yinshi/example/src/: left_hand.cpp  right_hand.cpp
(+57 files in other folders)
